welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:6: error: type mismatch;
 found   : Unit
 required: Boolean
		else if ( n>=1 && n<=10) {
                     ^in1To10:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if(outsideMode==true) {
        ^